--- a/AIText/Views/PromptTemplate/Index.cshtml
+++ b/AIText/Views/PromptTemplate/Index.cshtml
@@ -1,14 +1,14 @@
-﻿@model AIText.Models.AiSetting.AiSettingSearch
+﻿@model AIText.Models.PromptTemplate.PromptTemplateSearch
 <div class="page-header d-print-none ">
     <div class="row align-items-center mb-2">
         <div class="col">
             <h2 class="page-title">
-                Ai管理
+                指令配置
             </h2>
         </div>
         <div class="col-auto ms-auto d-print-none">
             <div class="btn-list">
-                <a data-src="/Aisetting/Add"  title="创建账号" class="btn btn-primary">
+                <a data-src="/PromptTemplate/Add" title="创建配置" class="btn btn-primary">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
                     添加
                 </a>
@@ -20,7 +20,7 @@
 
 <div class="row  justify-content-center">
     <div class="col-12 col-lg-12  ">
-        <form data-ajax="true" data-ajax-update="#divreplace" data-ajax-mode="replace" asp-action="DoList" asp-controller="Aisetting" data-ajax-method="post" method="post" class="card">
+        <form data-ajax="true" data-ajax-update="#divreplace" data-ajax-mode="replace" asp-action="DoList" asp-controller="PromptTemplate" data-ajax-method="post" method="post" class="card">
             <div class="card-header">
                 <div class="row" style="width:100%;">
                     <h4 class="card-title col">搜索</h4>
@@ -31,9 +31,9 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-2">
-                        <div class="subheader mb-2 mt-2">提示词</div>
+                        <div class="subheader mb-2 mt-2">指令内容</div>
                         <div>
-                            <input type="text" name="Prompt" class="form-control" placeholder="" autocomplete="off">
+                            <input type="text" asp-for="Keyword" class="form-control" placeholder="模糊搜索" autocomplete="off">
                         </div>
                     </div>
                     <div class="col-2">
@@ -61,7 +61,4 @@
             @Html.Action("DoList", Model)
         </div>
     </div>
-
-
-
 </div>
