--- a/AIText/Views/Shared/_Layout.cshtml
+++ b/AIText/Views/Shared/_Layout.cshtml
@@ -74,7 +74,7 @@
                                     </span>
                                 </a>
                             </li>
-                            <li class="nav-item @(Url.ActionContext.HttpContext.Request.Path.Value == "/BusinessKeyword" ? "active" : "") ">
+@*                             <li class="nav-item @(Url.ActionContext.HttpContext.Request.Path.Value == "/BusinessKeyword" ? "active" : "") ">
                                 <a class="nav-link" href="@Url.Content("~/BusinessKeyword")">
                                     <span class="nav-link-icon d-md-none d-lg-inline-block">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><polyline points="5 12 3 12 12 3 21 12 19 12" /><path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7" /><path d="M9 21v-6a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v6" /></svg>
@@ -83,7 +83,8 @@
                                         商务交易类词
                                     </span>
                                 </a>
-                            </li>
+                            </li> *@
+
                             <li class="nav-item @(Url.ActionContext.HttpContext.Request.Path.Value == "/SiteKeyword" ? "active" : "") ">
                                 <a class="nav-link" href="@Url.Content("~/SiteKeyword")">
                                     <span class="nav-link-icon d-md-none d-lg-inline-block">
@@ -94,7 +95,7 @@
                                     </span>
                                 </a>
                             </li>
-                            <li class="nav-item @(Url.ActionContext.HttpContext.Request.Path.Value == "/PaintAccount" ? "active" : "") ">
+@*                             <li class="nav-item @(Url.ActionContext.HttpContext.Request.Path.Value == "/PaintAccount" ? "active" : "") ">
                                 <a class="nav-link" href="@Url.Content("~/PaintAccount")">
                                     <span class="nav-link-icon d-md-none d-lg-inline-block">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><polyline points="5 12 3 12 12 3 21 12 19 12" /><path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7" /><path d="M9 21v-6a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v6" /></svg>
@@ -103,14 +104,14 @@
                                         绘图账号
                                     </span>
                                 </a>
-                            </li>
-                            <li class="nav-item @(Url.ActionContext.HttpContext.Request.Path.Value == "/AiSetting" ? "active" : "") ">
-                                <a class="nav-link" href="@Url.Content("~/AiSetting")">
+                            </li> *@
+                            <li class="nav-item @(Url.ActionContext.HttpContext.Request.Path.Value == "/PromptTemplate" ? "active" : "") ">
+                                <a class="nav-link" href="@Url.Content("~/PromptTemplate")">
                                     <span class="nav-link-icon d-md-none d-lg-inline-block">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><polyline points="5 12 3 12 12 3 21 12 19 12" /><path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7" /><path d="M9 21v-6a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v6" /></svg>
                                     </span>
                                     <span class="nav-link-title">
-                                        发文配置
+                                        指令配置
                                     </span>
                                 </a>
                             </li>
