--- a/AIText/Views/SiteAccount/Index.cshtml
+++ b/AIText/Views/SiteAccount/Index.cshtml
@@ -31,9 +31,21 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-2">
-                        <div class="subheader mb-2 mt-2">网站</div>
+                        <div class="subheader mb-2 mt-2">网站域名</div>
                         <div>
-                            <input type="text" name="Site" class="form-control" placeholder="" autocomplete="off">
+                            <input type="text" name="Site" class="form-control" placeholder="模糊搜索" autocomplete="off">
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div class="subheader mb-2 mt-2">网站类型</div>
+                        <div>
+                            <select asp-for="SiteType" class="form-control">
+                                <option value=""></option>
+                                @foreach (SiteType item in Enum.GetValues(typeof(SiteType)))
+                                {
+                                    <option value="@item.GetHashCode()">@item.ExtName()</option>
+                                }
+                            </select>
                         </div>
                     </div>
                     <div class="col-2">
