--- a/AIText/Views/SiteKeyword/Index.cshtml
+++ b/AIText/Views/SiteKeyword/Index.cshtml
@@ -52,7 +52,7 @@
                 <div class="row">
                     <div class="col-2">
                         <div class="subheader mb-2 mt-2">网站</div>
-                        <select name="SiteId" id="SiteId" class="form-control" required>
+                        <select name="SiteId" id="SiteId" class="form-control">
                             <option value="">请选择站点</option>
                             @if (sites?.Count > 0)
                             {
