--- a/AIText/Views/SiteAccount/DoList.cshtml
+++ b/AIText/Views/SiteAccount/DoList.cshtml
@@ -31,10 +31,10 @@
                         </td>
                         <td class="text-muted">
                             <div class="btn-list flex-nowrap">
-                                <a data-src="@Url.Content("~/SiteAccount/Edit?Id="+info.Id)" class="btn btn-white">
-                                    查看
+                                <a data-src="@Url.Content("~/SiteAccount/Edit?Id="+info.Id)" class="btn btn-azure">
+                                    修改
                                 </a>
-                                <a data-confirm="/SiteAccount/DoDelete?Id=@info.Id" title="是否删除" class="btn btn-white">
+                                <a data-confirm="/SiteAccount/DoDelete?Id=@info.Id" title="是否删除" class="btn btn-danger">
                                     删除
                                 </a>
                             </div>
