--- a/AIText/Views/SiteKeyword/DoList.cshtml
+++ b/AIText/Views/SiteKeyword/DoList.cshtml
@@ -65,7 +65,7 @@
                         </td>
                         <td class="text-muted">
                             <div class="btn-list flex-nowrap">
-                                <a data-confirm="/SiteKeyword/DoDelete?Id=@info.Id" title="是否删除" class="btn btn-white">
+                                <a data-confirm="/SiteKeyword/DoDelete?Id=@info.Id" title="是否删除" class="btn btn-danger">
                                     删除
                                 </a>
                             </div>
