--- a/AIText/Views/SendRecord/DoList.cshtml
+++ b/AIText/Views/SendRecord/DoList.cshtml
@@ -56,13 +56,13 @@
                                 <!--没有图片且未生成文章时，可调用绘图-->
                                 @if (string.IsNullOrEmpty(info.ImgUrl) && string.IsNullOrEmpty(info.Content))
                                 {
-                                    <a data-src="@Url.Action("~/SendRecord/DoDraw?Id=" + info.Id)" class="btn bg-yellow">
+                                    <a data-confirm="@Url.Content("/SendRecord/DoDraw?Id=" + info.Id)" title="是否绘图" class="btn bg-yellow">
                                         绘图
                                     </a>
                                 }
                                 @if (string.IsNullOrEmpty(info.Content))
                                 {
-                                    <a data-src="@Url.Action("~/SendRecord/DoAI?Id=" + info.Id)" class="btn btn-azure">
+                                    <a data-confirm="@Url.Content("/SendRecord/DoAI?Id=" + info.Id)" title="生成文章" class="btn btn-cyan">
                                         生成文章
                                     </a>
                                 }
@@ -70,18 +70,24 @@
                                 {
                                     if (info.IsSync == false)
                                     {
-                                        <a data-src="@Url.Action("~/SendRecord/DoSync?Id=" + info.Id)" class="btn btn-green">
+                                        <a data-confirm="@Url.Content("/SendRecord/DoSync?Id=" + info.Id)" title="发布到站点" class="btn btn-green">
                                             同步
                                         </a>
+                                        <a href="@Url.Content("/SendRecord/Preview?Id=" + info.Id)" class="btn btn-secondary" target="_blank">
+                                            文章预览
+                                        </a>
                                     }
-                                    <a href="@Url.Content("~/SendRecord/Preview?Id=" + info.Id)" class="btn btn-facebook" target="_blank">
-                                        预览
-                                    </a>
+                                    else if (!string.IsNullOrEmpty(info.SyncUrl))
+                                    {
+                                        <a href="@info.SyncUrl" class="btn btn-secondary" target="_blank">
+                                            文章查看
+                                        </a>
+                                    }
                                 }
-                                <a href="@Url.Content("~/SendRecord/Edit?Id=" + info.Id)" class="btn btn-white">
+                                <a href="@Url.Content("~/SendRecord/Edit?Id=" + info.Id)" class="btn btn-azure">
                                     查看
                                 </a>
-                                <a data-confirm="/SendRecord/DoDelete?Id=@info.Id" title="是否删除" class="btn btn-white">
+                                <a data-confirm="/SendRecord/DoDelete?Id=@info.Id" title="是否删除" class="btn btn-danger">
                                     删除
                                 </a>
                             </div>
