--- a/AIText/Views/SendRecord/Edit.cshtml
+++ b/AIText/Views/SendRecord/Edit.cshtml
@@ -2,55 +2,120 @@
 @{
 
 }
-<div class="modal-content">
-    <form class="form-horizontal" data-ajax="true" data-ajax-complete="ajaxRvCompleted" asp-action="DoEdit" asp-controller="SendRecord" data-ajax-method="post">
-        @Html.HiddenFor(obj => obj.Id)
-        <div class="modal-body">
+<div class="card">
 
-            <div class="row mb-3 align-items-end">
+    @Html.HiddenFor(obj => obj.Id)
+    @Html.HiddenFor(obj => obj.AiSiteId)
+    <div class="card-body">
 
-                <div class="col">
-                    <label class="form-label">提示词</label>
-                    <input asp-for="Prompt" class="bg-focus form-control parsley-validated" />
-                    <span asp-validation-for="Prompt" class="text-danger"> </span>
-                </div>
-                <div class="col">
-                    <label class="form-label">标题</label>
-                    <input asp-for="Title" type="text" class="bg-focus form-control parsley-validated" />
-                    <span asp-validation-for="Title" class="text-danger"> </span>
-                </div>
+        <div class="row mb-3 align-items-end">
+            <div class="col-6 mb-3">
+                <label class="form-label">推送站点</label>
+                @Html.HiddenFor(obj => obj.SyncSiteId)
+                <input asp-for="SyncSite" class="bg-focus form-control parsley-validated" readonly />
+                <span asp-validation-for="SyncSite" class="text-danger"> </span>
             </div>
-
-            <div class="row mb-3 align-items-end">
-
-                <div class="col">
-                    <label class="form-label">内容</label>
-                    <input asp-for="Content" class="bg-focus form-control parsley-validated" />
-                    <span asp-validation-for="Content" class="text-danger"> </span>
-                </div>
+            <div class="col-1 mb-3">
+                <label class="form-check">
+                    <input class="form-check-input" type="checkbox" asp-for="IsSync">
+                    <span class="form-check-label">是否同步</span>
+                </label>
             </div>
-
-            <div class="row mb-3 align-items-end">
-                <div class="col">
-                    <label class="form-label">同步时间</label>
-                    <input class="form-control" asp-for="SyncTime">
-
-                </div>
+            <div class="col-5 mb-3">
+                <label class="form-label">同步时间</label>
+                @Html.HiddenFor(obj => obj.SyncErrMsg)
+                <input asp-for="SyncTime" class="bg-focus form-control parsley-validated" readonly />
+                <span asp-validation-for="SyncTime" class="text-danger"> </span>
             </div>
-            <div class="row mb-3 align-items-end">
-                <div class="col">
-                    <label class="form-check">
-                        <input class="form-check-input" type="checkbox" asp-for="IsSync">
-                        <span class="form-check-label">是否同步</span>
-                    </label>
-                </div>
+            <div class="col-6 mb-3">
+                <label class="form-label">AI站点</label>
+                <input asp-for="AiSite" class="bg-focus form-control parsley-validated" readonly />
+                <span asp-validation-for="AiSite" class="text-danger"> </span>
             </div>
-
+            <div class="col-6 mb-3">
+                <label class="form-label">链接锚点</label>
+                <input asp-for="Link" class="bg-focus form-control parsley-validated" readonly />
+                <span asp-validation-for="Link" class="text-danger"> </span>
+            </div>
+            <div class="col-6 mb-3">
+                <label class="form-label">关键词</label>
+                @Html.HiddenFor(obj => obj.KeywordId)
+                <input asp-for="Keyword" class="bg-focus form-control parsley-validated" readonly />
+                <span asp-validation-for="Keyword" class="text-danger"> </span>
+            </div>
+            <div class="col-6 mb-3">
+                <label class="form-label">指令模板名</label>
+                @Html.HiddenFor(obj => obj.TemplateId)
+                <input asp-for="TemplateName" class="bg-focus form-control parsley-validated" readonly />
+                <span asp-validation-for="TemplateName" class="text-danger"> </span>
+            </div>
+            <div class="col-12 mb-3">
+                <label class="form-label">生成指令</label>
+                <textarea asp-for="Prompt" class="bg-focus form-control parsley-validated" rows="5" readonly></textarea>
+                <span asp-validation-for="Prompt" class="text-danger"> </span>
+            </div>
+            <div class="col-6 mb-3">
+                <label class="form-label">文章标题</label>
+                <input asp-for="Title" class="bg-focus form-control parsley-validated" readonly />
+                <span asp-validation-for="Title" class="text-danger"> </span>
+            </div>
+            @if (!string.IsNullOrEmpty(Model.Content))
+            {
+                <div class="col-1 mb-3">
+                    <label class="form-label invisible">预览</label>
+                    <a href="@Url.Content("~/SendRecord/Preview?Id=" + Model.Id)" class="btn btn-secondary" target="_blank">
+                        预览
+                    </a>
+                </div>
+                @if (!string.IsNullOrEmpty(Model.SyncUrl))
+                {
+                    <div class="col-3 mb-3">
+                        <label class="form-label invisible">预览</label>
+                        <a href="@Model.SyncUrl" class="btn btn-secondary" target="_blank">
+                            查看
+                        </a>
+                    </div>
+                }
+            }
+            <div class="col-12 mb-3">
+                <label class="form-label">文章内容</label>
+                <textarea asp-for="Content" class="bg-focus form-control parsley-validated" rows="10" readonly></textarea>
+                <span asp-validation-for="Content" class="text-danger"> </span>
+            </div>
+            <div class="col-6 mb-3">
+                <label class="form-label">AI文章生成时间</label>
+                @Html.HiddenFor(obj => obj.ErrMsg)
+                <input asp-for="AiTime" class="bg-focus form-control parsley-validated" readonly />
+                <span asp-validation-for="AiTime" class="text-danger"> </span>
+            </div>
+            <div class="col-6 mb-3">
+                <label class="form-label">生成图片</label>
+                <input asp-for="ImgUrl" class="bg-focus form-control parsley-validated" readonly />
+                <span asp-validation-for="ImgUrl" class="text-danger"> </span>
+            </div>
+            <div class="col-6 mb-3">
+                <label class="form-label">图片本地路径</label>
+                <input asp-for="ImgPath" class="bg-focus form-control parsley-validated" readonly />
+                <span asp-validation-for="ImgPath" class="text-danger"> </span>
+            </div>
+            <div class="col-6 mb-3">
+                <label class="form-label">图片生成时间</label>
+                @Html.HiddenFor(obj => obj.ImgErrMsg)
+                <input asp-for="ImgTime" class="bg-focus form-control parsley-validated" readonly />
+                <span asp-validation-for="ImgTime" class="text-danger"> </span>
+            </div>
+            <div class="col-6 mb-3">
+                <label class="form-label">创建时间</label>
+                <input asp-for="CreateTime" class="bg-focus form-control parsley-validated" readonly />
+                <span asp-validation-for="CreateTime" class="text-danger"> </span>
+            </div>
+            <div class="col-6 mb-3">
+                <label class="form-label">更新时间</label>
+                <input asp-for="UpdateTime" class="bg-focus form-control parsley-validated" readonly />
+                <span asp-validation-for="UpdateTime" class="text-danger"> </span>
+            </div>
         </div>
-        <div class="modal-footer">
-            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">修改</button>
-        </div>
-    </form>
+    </div>
 
 </div>
 
