--- a/AIText/Views/SiteKeyword/Import.cshtml
+++ b/AIText/Views/SiteKeyword/Import.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    var sites = ViewData["Site"] as List<AIText.SiteAccount>;
+    var sites = ViewData["Site"] as List<Entitys.SiteAccount>;
 }
 <div class="row row-cards mt-3 card">
     <div class="card-header">
