--- a/AIText/Views/SiteKeyword/Index.cshtml
+++ b/AIText/Views/SiteKeyword/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AIText.Models.SiteKeyword.SiteKeywordSearch
 @{
-    var sites = ViewData["Site"] as List<AIText.SiteAccount>;
+    var sites = ViewData["Site"] as List<Entitys.SiteAccount>;
 }
 <div class="page-header d-print-none ">
     <div class="row align-items-center mb-2">
