--- a/AIText/Views/SiteKeyword/ToImport.cshtml
+++ b/AIText/Views/SiteKeyword/ToImport.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<commons.import.ImportSiteKeywordDto>
 @{
-    var site = ViewData["SelectedSite"] as AIText.SiteAccount;
+    var site = ViewData["SelectedSite"] as Entitys.SiteAccount;
 }
 
 @if (Model.Count != 0)
