图片从素材库来，添加对应表以及相关操作

--- a/AIText/Views/Login/Index.cshtml
+++ b/AIText/Views/Login/Index.cshtml
@@ -45,7 +45,7 @@
         if (data.responseJSON != false && data.responseJSON) {
 
             $.tipsOk("登陆成功")
-            window.location = '/';
+            window.location = '/SiteAccount';
         }
         else {
             $.tipsError("登陆失败");
