--- a/AIText/Views/AiAccount/Edit.cshtml
+++ b/AIText/Views/AiAccount/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model AIText.AiAccount
+﻿@model Entitys.AiAccount
 @{
 
 }
@@ -7,7 +7,7 @@
         @Html.HiddenFor(obj => obj.Id)
         <div class="modal-body">
 
-                       <div class="row mb-3 align-items-end">
+            <div class="row mb-3 align-items-end">
 
                 <div class="col">
                     <label class="form-label">网站</label>
